# 13flow

./: .gitignore  DOCUMENTATION.md  FORMS4_INTEGRATION.md  INSTALL_SERVER.md  README.md  SECURITY.md  TEST_LOCAL.md  VALIDATION_PROTOCOL.md  dashboard.html  faq.html  mentions-legales.html  pyproject.toml  requirements.txt  run.py  seed_demo.py  server.json  wsgi.py
deploy/: 13flow-pro-backup-verify.service  13flow-pro-backup.env.example  13flow-pro-backup.service  13flow-pro-backup.timer  13flow-pro-workspace-snapshot.service  13flow-pro-workspace-snapshot.timer  13flow-pro.env  13flow-pro.service  13flow-refresh.service  13flow-refresh.timer  13flow-stats.service  13flow-stats.timer  13flow.env  13flow.service  INSTALL_DEBIAN_APACHE.md  PRO_API_SPLIT.md  activate-zen-default-cert.sh  apache-13flow-pro.conf  apache-13flow-stats.conf  apache-13flow.conf  apache-zen-default.conf  backfill-priority-funds.sh  backfill.sh  backup-pro-db.sh  deploy-code-safe.sh  diagnose-public-surface.sh  generate-stats.sh  install-stats.sh  perf-smoke-public.sh  preflight.sh  prepare-pro-backup-restore-check.sh  refresh-data.sh  smoke-private-stats.sh  smoke-pro-key-lifecycle.sh  smoke-pro-workspace.sh  smoke-public.sh  verify-pro-db-backup.sh
docs/: COMMERCIAL_MODEL.md  CONFLUENCE_V1.md  CORE_V1_BOUNDARY.md  DOCUMENTATION.md  GTM_PRODUCT_STATUS.md  MCP_REGISTRY.md  POST_RUN_FORM4_VALIDATION.md  PRO_API_ONBOARDING.md  PRO_MCP_REDISTRIBUTION_TERMS.md  confluence_v1.json
mcp-server/: README.md  package-lock.json  package.json  server.mjs  telemetry.mjs  test-client.mjs  test-config.mjs  test-security.mjs  test-telemetry.mjs  verify-registry.mjs
smartmoney/: __init__.py  accounts.py  alerts.py  analytics.py  api.py  api_signals.py  auth.py  backtest.py  billing.py  channels.py  crosssignal.py  db.py  diff.py  edgar.py  figi.py  forms4.py  hibp.py  netsec.py  notify.py  parser.py  portfolio.py  preflight.py  prices.py  pro.py  pwhash.py  (+12 more)
(+31 files in other folders)
