[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
license = { text = "AGPL-3.0-or-later" }
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"]
name = "smartmoney"
version = "0.1.0"
description = "Smart-money 13F superinvestor tracker (EDGAR parsing, portfolios, alerts, dashboard)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "defusedxml>=0.7",
    "argon2-cffi>=23.1",
    "flask>=3.0",
]

[project.optional-dependencies]
prod = ["gunicorn>=21", "stripe>=7"]
dev = ["pytest>=7", "stripe>=7"]

[tool.setuptools]
packages = ["smartmoney"]
